--- a/jp/study-design-1.qmd
+++ b/jp/study-design-1.qmd
@@ -299,7 +299,9 @@ a:hover {
 
 がんサバイバー調査を題材にして、研究仮説の例を3つ考えてみました。
 
--   研究仮説1
+---
+
+####  研究仮説1
 
     P: 根治切除後の直腸がん患者
 
@@ -311,7 +313,9 @@ a:hover {
 
 ストーマ保有者と非保有者の復職率を比較する研究を想定してみました。この場合Cをどうするかは悩ましい問題ですが、復職率の数字が得られただけでは、それが高いかどうか判断が難しいので、なんらかの比較対照を設定した方がよいでしょう。なお、比較可能性とは、この場合EとCを正しく比べられるということを意味します。
 
--   研究仮説2
+---
+
+####  研究仮説2
 
     P: 根治切除後のがん患者
 
@@ -323,9 +327,11 @@ a:hover {
 
 就労支援の一環として作成された「仕事とがん治療の両立お役立ちノート」の効果を調べようという研究です。患者Pは、直腸がんに限定せず、アウトカムOは、手術後の復職の有無としました。こうした方が、幅広い患者に当てはまる調査結果が得られますよね。これが一般化可能性の一例です。アウトカムについては、別の例として、患者満足度や患者の経済状態なども考えられるでしょう。
 
--   研究仮説3
+---
 
-    「性・年齢、ステージ、術後補助化学療法、パフォーマンスステータス、合併症、ストーマ、手術前の就労状況、家計収入額、がん保険、就労支援サービスの利用などの因子は、1年以内の復職率と関連するか」
+####  研究仮説3
+
+「性・年齢、ステージ、術後補助化学療法、パフォーマンスステータス、合併症、ストーマ、手術前の就労状況、家計収入額、がん保険、就労支援サービスの利用などの因子は、1年以内の復職率と関連するか」
 
 PECOになりにくい研究仮説もあります。たとえば、疾患発生と関連のあるリスク因子を探す、いわゆる探索的研究では、EとCははっきり決まっていません。構造化といっても、臨床疑問をかならずPECOの形式にしなければならないわけではありません。研究デザインに最低限必要な要素を特定することが大切です。
 :::
