--- a/en/Study-design-3.qmd
+++ b/en/Study-design-3.qmd
@@ -143,7 +143,7 @@ a:hover {
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# From Coffee Chat to Research − Study design III
+# Story and Quiz − Study design III
 
 ::: serif-block
 　　　　　　　　　　　　Keywords: OS/PFS/DFS/response, survival/competing risks, clinical trial
