--- a/en/study-design-1.qmd
+++ b/en/study-design-1.qmd
@@ -143,7 +143,7 @@ a:hover {
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# From Coffee Chat to Research − Study design I
+# Story and Quiz − Study design I
 
 ::: serif-block
 　　　　　　　　　　　　Keywords: OS/PFS/DFS/response, PICO/PECO, observational study
