--- a/en/study-design-2.qmd
+++ b/en/study-design-2.qmd
@@ -143,7 +143,7 @@ a:hover {
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# From Coffee Chat to Research − Study design II
+# Story and Quiz − Study design II
 
 ::: serif-block
 　　　　　　　　　　　　Keywords: OS/PFS/DFS/response, continuous/binary/count/survival
