--- a/index.qmd
+++ b/index.qmd
@@ -168,13 +168,13 @@ A toolkit for survival and competing risks analysis in R — the more technical 
 
 ## Story and Quiz — *How I learned research from my father*
 
-A series of short, warm stories about learning research written in both Japanese and English. Through conversations between a father and daughter, the essentials of research unfold naturally.
+A series of short, warm stories about learning research written in both English and Japanese. Through conversations between a father and daughter, the essentials of research unfold naturally.
 
 - For readers who want to grasp the *feel* of research before opening a textbook  
 - Light, conversational chapters you can read in a few minutes  
 - From Study Design → Frequentist thinking → Understanding effects and time → Adjusting for bias → Causal Inference → Publication
 
-**[Read the Story and Quiz series (in Japanese)](./jp/index.qmd)**
+**[Read in English](./en/index.html)**  /  **[Read in Japanese](./jp/index.html)** 
 </div>
 
 <div class="project-card">
