study design title

--- a/en/Study-design-3.qmd
+++ b/en/Study-design-3.qmd
@@ -1,4 +1,5 @@
 ---
+title: "A First Step into Survival and Competing Risks Analysis with R"
 format:
   html:
     toc: true
@@ -6,6 +7,10 @@ format:
 
 ```{=html}
 <style>
+header#title-block-header.quarto-title-block {
+  display: none !important;
+}
+
 body {
   margin: 0;
   background: #ffffff;
@@ -143,10 +148,11 @@ a:hover {
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# Story and Quiz − Study design III
 
-::: serif-block
-　　　　　　　　　　　　Keywords: OS/PFS/DFS/response, survival/competing risks, clinical trial
+# Study design III − A First Step into Survival and Competing Risks Analysis with R
+
+::: {.serif-block}
+　　　　　　　　Keywords: clinical trial, outcome, simulation, survival/competing-risk
 :::
 
 ------------------------------------------------------------------------
