--- a/en/study-design-1.qmd
+++ b/en/study-design-1.qmd
@@ -1,4 +1,5 @@
 ---
+title: "A Story of Coffee Chat and Research Hypothesis"
 format:
   html:
     toc: true
@@ -6,6 +7,10 @@ format:
 
 ```{=html}
 <style>
+header#title-block-header.quarto-title-block {
+  display: none !important;
+}
+
 body {
   margin: 0;
   background: #ffffff;
@@ -143,10 +148,10 @@ a:hover {
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# Story and Quiz − Study design I
+# Study design I − A Story of Coffee Chat and Research Hypothesis
 
 ::: serif-block
-　　　　　　　　　　　　Keywords: OS/PFS/DFS/response, PICO/PECO, observational study
+　　　　　　　　Keywords: observational study, outcome, study design
 :::
 
 ------------------------------------------------------------------------
