--- a/en/Study-design-4.qmd
+++ b/en/Study-design-4.qmd
@@ -134,8 +134,8 @@ a:hover {
   margin-bottom: 0.4rem;
 }
 
-.serif-text p {
-  font-family: "Georgia", "Times New Roman", serif;
+.text-right {
+  text-align: right;
 }
 .serif-block p {
   font-family: "Georgia", "Times New Roman", serif;
@@ -150,8 +150,8 @@ a:hover {
 
 # Study design IV − The Bridge from Data Collection to Analysis
 
-::: serif-block
-　　　　　　　　Keywords: generalized linear model, outcome, simulation, survival/competing-risk
+::: {.serif-block .text-right}
+Keywords: generalized linear model, outcome, simulation, survival/competing-risk
 :::
 
 ---
