--- a/jp/frequentist-4.qmd
+++ b/jp/frequentist-4.qmd
@@ -1,9 +1,16 @@
 ---
+title: "Understanding Confidence Intervals via Hypothetical Replications in R"
 format:
   html:
     toc: true
 ---
+
+```{=html}
 <style>
+header#title-block-header.quarto-title-block {
+  display: none !important;
+}
+
 body {
   margin: 0;
   background: #ffffff;
@@ -127,22 +134,24 @@ a:hover {
   margin-bottom: 0.4rem;
 }
 
-.serif-text p {
-  font-family: "Georgia", "Times New Roman", serif;
+.text-right {
+  text-align: right;
 }
 .serif-block p {
   font-family: "Georgia", "Times New Roman", serif;
   font-size: 0.9em;  line-height: 1.6;
 }
 </style>
+```
 
 ::: hero-header
 ![](../image/father-daughter.png){.hero-header-img}
 :::
-# Story and Quiz − Frequentist thinking IV
 
-::: serif-block
-　　　　　　　　　　　　Keywords: OS/PFS/DFS/response, survival/competing-risk, clinical trial
+# Frequentist Thinking IV − Understanding Confidence Intervals via Hypothetical Replications in R
+
+::: {.serif-block .text-right}
+Keywords: clinical trial, simulation, study design, survival/competing-risk
 :::
 
 ------------------------------------------------------------------------
