--- a/jp/frequentist-5.qmd
+++ b/jp/frequentist-5.qmd
@@ -1,9 +1,16 @@
 ---
+title: "Alpha, Beta, and Power: The Fundamental Probabilities Behind Sample Size"
 format:
   html:
     toc: true
 ---
+
+```{=html}
 <style>
+header#title-block-header.quarto-title-block {
+  display: none !important;
+}
+
 body {
   margin: 0;
   background: #ffffff;
@@ -127,23 +134,26 @@ a:hover {
   margin-bottom: 0.4rem;
 }
 
-.serif-text p {
-  font-family: "Georgia", "Times New Roman", serif;
+.text-right {
+  text-align: right;
 }
 .serif-block p {
   font-family: "Georgia", "Times New Roman", serif;
   font-size: 0.9em;  line-height: 1.6;
 }
 </style>
+```
 
 ::: hero-header
 ![](../image/father-daughter.png){.hero-header-img}
 :::
-# Story and Quiz − Frequentist thinking V
 
-::: serif-block
-　　　　　　　　　　　　Keywords: sample size calculation, clinical trial, observational study
+# Frequentist Thinking V − Alpha, Beta, and Power: The Fundamental Probabilities Behind Sample Size
+
+::: {.serif-block .text-right}
+Keywords: clinical trial, simulation, study design, observational study
 :::
+
 
 ------------------------------------------------------------------------
 
