--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Distinguishing Time-Point, Time-Constant, and Time-Varying Effects with R Example"
+title: "Distinguishing Time-Point, Time-Constant, and Time-Varying Effects: An R Example"
 format:
   html:
     toc: true
