--- a/jp/effects-2.qmd
+++ b/jp/effects-2.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Silent Targets Behind Risks and Effects"
+title: "Who Is This Percentage About? Target Populations and Attributable Fractions"
 format:
   html:
     toc: true
@@ -148,7 +148,7 @@ a:hover {
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# Effects and time II − Silent Targets Behind Risks and Effects
+# Effects and time II − Who Is This Percentage About? Target Populations and Attributable Fractions
 
 ::: {.serif-block .text-right}
 Keywords: binary outcome, effect measure, observational study, scientific writing
